# HMS_PN532_DRIVER

./: CMakeLists.txt  HMS_PN532_MifareClassic.cpp  HMS_PN532_MifareUltralight.cpp  HMS_PN532_NDEF_Message.cpp  HMS_PN532_NDEF_Record.cpp  README.md  config.cpp  idf_component.yml  library.json  library.properties
examples/PlatformIo/Arduino/ESP32-C3_NFC_Reader/: platformio.ini
examples/PlatformIo/Arduino/ESP32-C3_NFC_Reader/src/: main.cpp
include/: HMS_PN532_ComInterface.h  HMS_PN532_Config.h  HMS_PN532_Controller.h  HMS_PN532_DRIVER.h  HMS_PN532_Interface_I2C.h  HMS_PN532_MifareClassic.h  HMS_PN532_MifareUltralight.h  HMS_PN532_NDEF_Message.h  HMS_PN532_NDEF_Record.h  HMS_PN532_NFC_Tag.h
src/: HMS_PN532_Controller.cpp  HMS_PN532_DRIVER.cpp  HMS_PN532_Interface_I2C.cpp  HMS_PN532_MifareClassic.cpp  HMS_PN532_NFC_Tag.cpp
